--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -349,7 +349,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="EiV-os-9xK">
-                                <rect key="frame" x="60" y="144" width="480" height="89"/>
+                                <rect key="frame" x="60" y="124" width="480" height="89"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Ingredient Prompt" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fam-N9-5Cs">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
@@ -368,23 +368,38 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BN0-oZ-Fph">
-                                <rect key="frame" x="60" y="233" width="480" height="200"/>
+                                <rect key="frame" x="60" y="213" width="480" height="240"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="lT3-Ju-kEG"/>
+                                    <constraint firstAttribute="height" constant="240" id="lT3-Ju-kEG"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResultCell" id="4nb-OB-9c3">
+                                        <rect key="frame" x="0.0" y="28" width="480" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4nb-OB-9c3" id="vtd-h6-jQc">
+                                            <rect key="frame" x="0.0" y="0.0" width="480" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="BN0-oZ-Fph" firstAttribute="top" secondItem="EiV-os-9xK" secondAttribute="bottom" id="4rS-Oh-Nfg"/>
-                            <constraint firstItem="EiV-os-9xK" firstAttribute="top" secondItem="swY-8a-cbh" secondAttribute="bottom" constant="80" id="Bfc-gb-ccp"/>
+                            <constraint firstItem="EiV-os-9xK" firstAttribute="top" secondItem="swY-8a-cbh" secondAttribute="bottom" constant="60" id="Bfc-gb-ccp"/>
                             <constraint firstItem="BN0-oZ-Fph" firstAttribute="width" secondItem="EiV-os-9xK" secondAttribute="width" id="PDX-gI-YaE"/>
                             <constraint firstItem="EiV-os-9xK" firstAttribute="width" secondItem="4iI-hA-DIB" secondAttribute="width" multiplier="0.8" id="XE5-dX-cXR"/>
                             <constraint firstItem="EiV-os-9xK" firstAttribute="centerX" secondItem="4iI-hA-DIB" secondAttribute="centerX" id="aSJ-rP-jF5"/>
                             <constraint firstItem="BN0-oZ-Fph" firstAttribute="centerX" secondItem="4iI-hA-DIB" secondAttribute="centerX" id="cNN-ri-4AM"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addIngredientPromptLabel" destination="fam-N9-5Cs" id="51F-1U-51g"/>
+                        <outlet property="addIngredientSearchBar" destination="Tur-BP-tOK" id="8ec-aM-BEM"/>
+                        <outlet property="addIngredientTableView" destination="BN0-oZ-Fph" id="gPu-tf-LpI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gsB-rw-wFt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
